<resources>
    <string name="app_name">SkillWorld</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="email">www.amcat.com</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_currentpassword">Current Password</string>
    <string name="prompt_newpassword">New Password</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_or">Or</string>
    <string name="register"><u>Register</u></string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="please">Please enter the following</string>
    <string name="Agree">By Registering, you agree to our <u>Terms of Use</u><www.google.com /> and <u>Privacy Policy</u><www.google.com /></string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="aadhar_card_number">Aadhar Card Number</string>
    <string name="pan_card_number">Pan Card Number</string>
    <string name="mobilenumber">10-digit Mobile Number</string>
    <string name="upload"><u>Upload your Document</u></string>
    <string name="uploadpic">Upload your Image here</string>
    <string name="title_activity_registration">Registration</string>
    <string name="action_register">Register</string>

    <string name="location">Select Your</string>

    <string name="forgotpassword"><u>Forgot Password</u></string>

    <string name="title_activity_refer">Refer</string>
    <string name="action_submit">Submit</string>
    <string name="any_pref"><u>Any Dealer Preferences?</u></string>
    <string name="dealer_name">Dealer Name</string>
    <string name="name">Name</string>

    <string name="Edit"><u>Edit</u></string>

    <string name="fb">Sign up with Facebook</string>
    <string name="gplus">Sign up with Google</string>

    <string name="login"><u>Login</u></string>

    <string name="bill">Bill No</string>
    <string name="purchasedate">Purchase Date</string>
    <string name="amount">Amount</string>
    <string name="uploadbill">Upload your Bill Image here</string>
    <string name="title_activity_my_payment">My Payment</string>
    <string name="title_activity_my_leads">My Leads</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="CustomerOffer">CustomerOffer</string>

    <string name="lead">Lead Id</string>
    <string name="offername">Offer Name</string>
    <string name="buyername">Buyers Name</string>
    <string name="referralamnt">Referral Amount</string>
    <string name="leadclosedate">Lead Closed Date</string>

    <string name="uploadbank"><u>Upload Bank Details</u></string>
    <string name="uploadimg"><u>Upload Image</u></string>

    <string name="save">Save</string>
    <string name="titleoffer">Offer Title</string>
    <string name="validity">Validity</string>
    <string name="des">Description</string>
    <string name="comm">Commission on Completing the Job</string>
    <string name="multipleimg">Other Multiple Images</string>
    <string name="refer">Refer</string>
    <string name="accept">Accept</string>
    <string name="category">Categories</string>
    <string name="customername">Customer Name</string>
    <string name="title_activity_maps">Map</string>


    <string name="sales">Sales Pitch</string>
    <string name="productvideo">Product Video</string>

    <string name="tnc">Terms &amp; Conditions</string>

    <string name="test">Tests Required</string>

    <string name="view">View More</string>

    <string name="viewpagerheight">350dp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_preferences">Preferences</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
