<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_refer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.Refer">
    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">
            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="Buyer Name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:maxLines="1"
                android:nextFocusForward="@+id/phonenumber"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/mobilenumber"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:nextFocusForward="@+id/email"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusForward="@+id/planbuy"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15dp"
                android:text="Plan to buy"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            </TextView>
            <Spinner
                android:id="@+id/planbuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/viewlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/buy_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Buyers Location"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/dealername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:gravity="left"
                android:layout_below="@+id/tv_education"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/submit"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#0a0762"
        android:text="@string/action_submit"
        android:textColor="#fff"
        android:textStyle="normal" />
</RelativeLayout>
